# laplace_kernels

./: .travis.yml  CMakeLists.txt  Readme.md  laplace2DKernel.cpp  laplace2DKernel.h  laplace3DKernel.cpp  laplace3DKernel.h  laplaceKernels.kdev4  setup.py  test.cpp  test.h  vtkWriter.cpp  vtkWriter.h
.conda/: build.sh  cheat-sheet.md  meta.yaml
packaging/conda/: build.sh  cheat-sheet.md  meta.yaml  upload.py
src/: CMakeLists.txt  laplaceKern2D.cpp  laplaceKern2D.h  laplaceKern3D.cpp  laplaceKern3D.h  laplaceKern_pyext.cpp  test2D.cpp  test3D.cpp  vtkWriter.cpp  vtkWriter.h
